[fix/scrollbar]: 颜色调整

--- a/src/renderer/src/styles/base.css
+++ b/src/renderer/src/styles/base.css
@@ -45,9 +45,7 @@
 
 .scroll::-webkit-scrollbar-thumb {
   background-color: rgba(0, 0, 0, 0.07);
-  /* border: 1px solid transparent; */
   border-radius: 9999px;
-  /* background-clip: content-box; */
 }
 .scroll::-webkit-scrollbar-thumb:hover {
   background-color: rgba(0, 0, 0, 0.3);
@@ -55,6 +53,10 @@
 
 .dark .scroll::-webkit-scrollbar-thumb {
   background-color: rgba(255, 255, 255, 0.2);
+}
+
+.dark .scroll::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.55);
 }
 
 main::-webkit-scrollbar {
