--- a/src/renderer/src/styles/scroll-bar.css
+++ b/src/renderer/src/styles/scroll-bar.css
@@ -1,8 +1,8 @@
 :root {
   .os-theme-custom {
-    --os-handle-bg: rgba(0, 0, 0, 0.3);
-    --os-handle-bg-hover: rgba(0, 0, 0, 0.55);
-    --os-handle-bg-active: rgba(0, 0, 0, 0.66);
+    --os-handle-bg: rgba(0, 0, 0, 0.07);
+    --os-handle-bg-hover: rgba(0, 0, 0, 0.3);
+    --os-handle-bg-active: rgba(0, 0, 0, 0.55);
 
     --os-size: 11px;
     --os-padding-perpendicular: 3px;
@@ -14,7 +14,7 @@
 
 }
 .dark .os-theme-custom {
-  --os-handle-bg: rgba(255, 255, 255, 0.44);
+  --os-handle-bg: rgba(255, 255, 255, 0.2);
   --os-handle-bg-hover: rgba(255, 255, 255, 0.55);
   --os-handle-bg-active: rgba(255, 255, 255, 0.66);
 }
